--- a/hw2/frontend/package.json
+++ b/hw2/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap-react": "^0.5.0-alpha.14",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^4.2.0"
   },
