--- a/hw3/docker-compose.yml
+++ b/hw3/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   postgresql:
-    image: postgres
+    image: postgres:latest
     environment:
       POSTGRES_DB: twitter
       POSTGRES_USER: postgres
@@ -13,7 +13,7 @@ services:
     volumes:
       - ./pg-data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "1724:5432"
 
   # adminer is a web interface for sql databases
   # visit http://localhost:8080 to access it, login with the credentials above
