--- a/hw3/package.json
+++ b/hw3/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.17.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +32,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "lucide-react": "^0.279.0",
+    "material-ui-search-bar": "^1.0.1",
     "next": "13.5.1",
     "pg": "^8.11.3",
     "postcss": "8.4.30",
