--- a/hw4/.env.local
+++ b/hw4/.env.local
@@ -9,4 +9,5 @@ AUTH_SECRET="harrypotter"
 AUTH_GITHUB_ID="99e71a9b3182620443ca"
 AUTH_GITHUB_SECRET="5b0844081b60fa010413db2c0976fbf67e78fc9e"
 
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL="https://sandra.cinatrin.pro"
+NEXTAUTH_URL="https://sandra.cinatrin.pro"
