--- a/hw4/package.json
+++ b/hw4/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "migrate": "drizzle-kit push:pg",
-    "studio": "drizzle-kit studio"
+    "studio": "drizzle-kit studio",
+    "exec:db": "podman exec -it hw4_postgresql_1 psql -Upostgres notion-clone"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -28,6 +33,7 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.3.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "tailwind-merge": "^2.0.0",
